--- a/Lab6/index.html
+++ b/Lab6/index.html
@@ -5,48 +5,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab 6 - Holy Grail Layout</title>
     <link rel="stylesheet" href="style.css">
+
+    <!-- no JS changes needed here -->
 </head>
 <body>
-    <header>
+    <header class="site-header">
         <h1>My Awesome Lab 6 Page</h1>
+        <p class="subtitle">ITC505 • Bubble Sort Demo</p>
     </header>
 
-    <aside class="sidebar">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact</a></li>
+    <aside class="sidebar nav-card">
+        <h2 class="sidebar-title">Menu</h2>
+        <ul class="sidebar-links">
+            <li><a href="#">🏠 Home</a></li>
+            <li><a href="#">👤 About</a></li>
+            <li><a href="#">🛠 Projects</a></li>
+            <li><a href="#">✉ Contact</a></li>
         </ul>
     </aside>
 
-    <main>
+    <main class="main-card">
         <h2>Sort Numbers</h2>
-        <p>Enter numbers separated by commas:</p>
-        <input type="text" id="numInput" placeholder="Example: 5,2,9,1,3">
-        <button onclick="sortNumbers()">Sort</button>
-        <p>Sorted Result:</p>
-        <p id="output"></p>
+
+        <p class="label">Enter numbers separated by commas:</p>
+
+        <input
+            type="text"
+            id="numInput"
+            class="text-input"
+            placeholder="Example: 5,2,9,1,3">
+
+        <button class="sort-btn" onclick="sortNumbers()">Sort</button>
+
+        <div class="result-block">
+            <p class="result-title">Sorted Result:</p>
+            <div id="output" class="result-box">[waiting...]</div>
+        </div>
     </main>
 
-    <aside class="ad">
-        <a href="https://www.amazon.com/" target="_blank">
-            <img src="https://via.placeholder.com/200x300?text=Amazon+Ad" alt="Amazon Product">
+    <aside class="ad ad-card">
+        <a href="https://www.amazon.com/" target="_blank" class="ad-link">
+            <img
+                src="https://m.media-amazon.com/images/I/61N0m3bK5hL._AC_SX522_.jpg"
+                alt="Noise-Cancelling Headphones"
+                class="ad-img">
+            <p class="ad-caption">Amazon Product: Focus Headphones</p>
         </a>
     </aside>
 
-    <footer>
-        <p>Addendum: This JavaScript program takes numbers from the user, sorts them, and displays the result.</p>
-        <p>Last updated: <span id="lastModified"></span></p>
+    <footer class="site-footer footer-card">
+        <p class="addendum">
+            <strong>Addendum:</strong>
+            This JavaScript program takes numbers from the user, sorts them using JavaScript,
+            and displays the sorted result live without reloading the page.
+        </p>
+
+        <p class="last-updated">
+            Last updated:
+            <span id="lastModified"></span>
+        </p>
     </footer>
 
+    <!-- your script -->
     <script src="script.js"></script>
+
+    <!-- required lastModified script from assignment -->
     <script>
         var x = document.lastModified;
         document.getElementById('lastModified').textContent = x;
     </script>
-
 </body>
 </html>
-
-
