--- a/Lab6/index.html
+++ b/Lab6/index.html
@@ -1,78 +1,460 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lab 6 - Holy Grail Layout</title>
-    <link rel="stylesheet" href="style.css">
 
-    <!-- no JS changes needed here -->
+    <style>
+        /* ===== Global Reset / Base ===== */
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
+        }
+
+        body {
+            background: linear-gradient(135deg, #eef2ff 0%, #f8fafc 60%);
+            color: #1e293b;
+            min-height: 100vh;
+        }
+
+        a {
+            color: #2563eb;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        /* ===== Holy Grail Grid Layout ===== */
+        .page-grid {
+            display: grid;
+            min-height: 100vh;
+            gap: 1rem;
+            padding: 1rem;
+            grid-template-columns: 220px 1fr 240px;
+            grid-template-rows: auto 1fr auto;
+            grid-template-areas:
+                "header header header"
+                "nav main ad"
+                "footer footer footer";
+        }
+
+        header {
+            grid-area: header;
+            background: #1e293b;
+            color: #fff;
+            border-radius: 0.75rem;
+            padding: 1rem 1.25rem;
+            box-shadow: 0 16px 32px rgba(0,0,0,0.25);
+            display: flex;
+            flex-direction: column;
+            gap: 0.25rem;
+        }
+
+        header h1 {
+            font-size: 1.4rem;
+            font-weight: 600;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            color: #fff;
+        }
+
+        header h1 span.icon {
+            font-size: 1.4rem;
+        }
+
+        header .subtitle {
+            font-size: 0.9rem;
+            color: #94a3b8;
+            font-weight: 500;
+        }
+
+        /* ===== Left Nav / Menu ===== */
+        nav {
+            grid-area: nav;
+            background: #ffffffdd;
+            border-radius: 0.75rem;
+            border: 1px solid #cbd5e1;
+            box-shadow: 0 12px 24px rgba(0,0,0,0.07);
+            padding: 1rem 1rem 1.25rem;
+        }
+
+        nav h2 {
+            font-size: 1rem;
+            font-weight: 600;
+            color: #0f172a;
+            margin-bottom: 0.75rem;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        nav ul {
+            list-style: none;
+            display: grid;
+            gap: 0.5rem;
+        }
+
+        nav li a {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            background: #f8fafc;
+            border: 1px solid #cbd5e1;
+            border-radius: 0.5rem;
+            padding: 0.6rem 0.75rem;
+            font-size: 0.9rem;
+            font-weight: 500;
+            color: #1e293b;
+            text-decoration: none;
+            transition: all 0.15s ease-in-out;
+        }
+
+        nav li a .link-icon {
+            font-size: 1rem;
+        }
+
+        nav li a:hover {
+            background: #1e293b;
+            border-color: #1e293b;
+            color: #fff;
+        }
+
+        /* ===== Main Content (Sorter Tool) ===== */
+        main {
+            grid-area: main;
+            background: #ffffffdd;
+            border-radius: 0.75rem;
+            border: 1px solid #cbd5e1;
+            box-shadow: 0 12px 24px rgba(0,0,0,0.07);
+            padding: 1rem 1.25rem 1.5rem;
+        }
+
+        .tool-header {
+            font-size: 1.1rem;
+            font-weight: 600;
+            color: #0f172a;
+            margin-bottom: 0.5rem;
+            display: flex;
+            align-items: center;
+            gap: .5rem;
+        }
+
+        .tool-header .tool-icon {
+            font-size: 1.2rem;
+        }
+
+        .instructions {
+            font-size: 0.9rem;
+            line-height: 1.4rem;
+            color: #475569;
+            background: #f8fafc;
+            border-left: 4px solid #475569;
+            border-radius: 0.5rem;
+            padding: 0.75rem;
+            margin-bottom: 1rem;
+        }
+
+        .form-row {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: flex-start;
+            gap: 0.5rem;
+            margin-bottom: 1rem;
+        }
+
+        label {
+            font-size: 0.9rem;
+            font-weight: 500;
+            color: #0f172a;
+            width: 100%;
+        }
+
+        input[type="text"] {
+            flex: 1;
+            min-width: 220px;
+            padding: 0.6rem 0.75rem;
+            border-radius: 0.5rem;
+            border: 1px solid #94a3b8;
+            font-size: 1rem;
+            outline: none;
+            background: #fff;
+            color: #0f172a;
+        }
+
+        input[type="text"]:focus {
+            border-color: #4f46e5;
+            box-shadow: 0 0 0 3px rgba(79,70,229,0.3);
+        }
+
+        button {
+            cursor: pointer;
+            border: none;
+            background: linear-gradient(90deg, #4f46e5 0%, #14b8a6 100%);
+            color: white;
+            font-size: 0.95rem;
+            font-weight: 600;
+            padding: 0.6rem 0.9rem;
+            border-radius: 0.5rem;
+            box-shadow: 0 16px 24px rgba(79,70,229,0.35);
+            transition: all 0.15s ease-in-out;
+            white-space: nowrap;
+        }
+
+        button:hover {
+            filter: brightness(1.07);
+            box-shadow: 0 20px 28px rgba(79,70,229,0.5);
+        }
+
+        .error-box {
+            display: none;
+            background: #fee2e2;
+            color: #7f1d1d;
+            border: 1px solid #fecaca;
+            border-radius: 0.5rem;
+            padding: 0.5rem 0.75rem;
+            font-size: 0.85rem;
+            line-height: 1.3rem;
+            font-weight: 500;
+            margin-bottom: 1rem;
+        }
+
+        .error-box.show {
+            display: block;
+        }
+
+        .results-block {
+            background: #f8fafc;
+            border: 1px solid #cbd5e1;
+            border-radius: 0.5rem;
+            padding: 0.75rem 1rem;
+            font-size: 0.95rem;
+            line-height: 1.4rem;
+            color: #0f172a;
+        }
+
+        .result-row {
+            margin-bottom: 0.4rem;
+        }
+
+        .result-label {
+            font-weight: 600;
+            color: #1e293b;
+        }
+
+        /* ===== Ad / Amazon section ===== */
+        aside {
+            grid-area: ad;
+            background: #ffffffdd;
+            border-radius: 0.75rem;
+            border: 1px solid #cbd5e1;
+            box-shadow: 0 12px 24px rgba(0,0,0,0.07);
+            padding: 1rem;
+            text-align: center;
+        }
+
+        aside h2 {
+            font-size: 1rem;
+            font-weight: 600;
+            color: #0f172a;
+            margin-bottom: 0.75rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: .5rem;
+        }
+
+        aside h2 .ad-icon {
+            font-size: 1.1rem;
+        }
+
+        .ad-img {
+            width: 100%;
+            border-radius: 0.75rem;
+            border: 1px solid #cbd5e1;
+            background-color: #fff;
+            box-shadow: 0 12px 24px rgba(0,0,0,0.12);
+            margin-bottom: 0.5rem;
+        }
+
+        .ad-link {
+            display: inline-block;
+            font-size: 0.85rem;
+            font-weight: 500;
+            color: #2563eb;
+            text-decoration: underline;
+            text-underline-offset: 2px;
+        }
+
+        /* ===== Footer / Addendum ===== */
+        footer {
+            grid-area: footer;
+            background: #1e293b;
+            color: #fff;
+            border-radius: 0.75rem;
+            box-shadow: 0 -16px 32px rgba(0,0,0,0.4);
+            padding: 1rem 1.25rem;
+            display: grid;
+            gap: 0.75rem;
+        }
+
+        .addendum-title {
+            font-size: 1rem;
+            font-weight: 600;
+            display: flex;
+            align-items: center;
+            gap: .5rem;
+            color: #fff;
+        }
+
+        .addendum-text {
+            font-size: 0.85rem;
+            line-height: 1.4rem;
+            color: #cbd5e1;
+        }
+
+        .last-updated {
+            font-size: 0.8rem;
+            color: #94a3b8;
+            border-top: 1px solid #334155;
+            padding-top: 0.5rem;
+        }
+
+        code {
+            background: #e2e8f0;
+            color: #1e293b;
+            padding: 0.15rem 0.35rem;
+            border-radius: 0.3rem;
+            font-size: 0.8rem;
+        }
+
+        /* ===== Responsive for narrow screens ===== */
+        @media (max-width: 800px) {
+            .page-grid {
+                grid-template-columns: 1fr;
+                grid-template-rows: auto auto auto auto auto;
+                grid-template-areas:
+                    "header"
+                    "nav"
+                    "main"
+                    "ad"
+                    "footer";
+            }
+        }
+    </style>
 </head>
 <body>
-    <header class="site-header">
-        <h1>My Awesome Lab 6 Page</h1>
-        <p class="subtitle">ITC505 • Bubble Sort Demo</p>
+
+<div class="page-grid">
+
+    <!-- ===== HEADER ===== -->
+    <header>
+        <h1>
+            <span class="icon">🧪</span>
+            My Awesome Lab 6 Page
+        </h1>
+        <div class="subtitle">ITC505 • Bubble Sort Demo</div>
     </header>
 
-    <aside class="sidebar nav-card">
-        <h2 class="sidebar-title">Menu</h2>
-        <ul class="sidebar-links">
-            <li><a href="#">🏠 Home</a></li>
-            <li><a href="#">👤 About</a></li>
-            <li><a href="#">🛠 Projects</a></li>
-            <li><a href="#">✉ Contact</a></li>
+    <!-- ===== NAV / MENU ===== -->
+    <nav>
+        <h2>📂 Menu</h2>
+        <ul>
+            <li>
+                <a href="#">
+                    <span class="link-icon">🏠</span>
+                    <span>Home</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span class="link-icon">👤</span>
+                    <span>About</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span class="link-icon">🛠</span>
+                    <span>Projects</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span class="link-icon">✉️</span>
+                    <span>Contact</span>
+                </a>
+            </li>
         </ul>
-    </aside>
+    </nav>
 
-    <main class="main-card">
-        <h2>Sort Numbers</h2>
+    <!-- ===== MAIN CONTENT ===== -->
+    <main>
+        <div class="tool-header">
+            <span class="tool-icon">🔢</span>
+            <span>Sort Numbers</span>
+        </div>
 
-        <p class="label">Enter numbers separated by commas:</p>
+        <div class="instructions">
+            Enter numbers separated by commas (example: <code>5,2,9,1,3</code>).
+            Click <strong>Sort</strong> and you'll see:
+            sorted list, min, max, and average.
+        </div>
 
-        <input
-            type="text"
-            id="numInput"
-            class="text-input"
-            placeholder="Example: 5,2,9,1,3">
+        <div class="form-row">
+            <label for="numbersInput">Your numbers:</label>
+            <input
+                id="numbersInput"
+                type="text"
+                placeholder="5,2,9,1,3"
+            />
+            <button id="sortBtn">Sort</button>
+        </div>
 
-        <button class="sort-btn" onclick="sortNumbers()">Sort</button>
+        <div id="errorBox" class="error-box"></div>
 
-        <div class="result-block">
-            <p class="result-title">Sorted Result:</p>
-            <div id="output" class="result-box">[waiting...]</div>
+        <div class="results-block">
+            <div class="result-row">
+                <span class="result-label">Sorted: </span>
+                <span id="sortedOutput">[waiting...]</span>
+            </div>
+            <div class="result-row">
+                <span class="result-label">Min: </span>
+                <span id="minOutput">-</span>
+            </div>
+            <div class="result-row">
+                <span class="result-label">Max: </span>
+                <span id="maxOutput">-</span>
+            </div>
+            <div class="result-row">
+                <span class="result-label">Average: </span>
+                <span id="avgOutput">-</span>
+            </div>
         </div>
     </main>
 
-    <aside class="ad ad-card">
-        <a href="https://www.amazon.com/" target="_blank" class="ad-link">
+    <!-- ===== AD / AMAZON ===== -->
+    <aside>
+        <h2>
+            <span class="ad-icon">💡</span>
+            <span>Sponsored</span>
+        </h2>
+
+        <a href="https://www.amazon.com/dp/B0CFQ8Z3QW" target="_blank" rel="noopener noreferrer">
             <img
-                src="https://m.media-amazon.com/images/I/61N0m3bK5hL._AC_SX522_.jpg"
+                class="ad-img"
+                src="https://m.media-amazon.com/images/I/61u1VL+fJiL._AC_SL1500_.jpg"
                 alt="Noise-Cancelling Headphones"
-                class="ad-img">
-            <p class="ad-caption">Amazon Product: Focus Headphones</p>
+            />
+        </a>
+
+        <a class="ad-link" href="https://www.amazon.com/dp/B0CFQ8Z3QW" target="_blank" rel="noopener noreferrer">
+            Amazon Product: Focus Headphones →
         </a>
     </aside>
 
-    <footer class="site-footer footer-card">
-        <p class="addendum">
-            <strong>Addendum:</strong>
-            This JavaScript program takes numbers from the user, sorts them using JavaScript,
-            and displays the sorted result live without reloading the page.
-        </p>
-
-        <p class="last-updated">
-            Last updated:
-            <span id="lastModified"></span>
-        </p>
-    </footer>
-
-    <!-- your script -->
-    <script src="script.js"></script>
-
-    <!-- required lastModified script from assignment -->
-    <script>
-        var x = document.lastModified;
-        document.getElementById('lastModified').textContent = x;
-    </script>
-</body>
-</html>
+    <!-- ===== FOOTER =
